--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,14 @@ buildscript {
         hilt_version = '2.44'
         dagger_version = '2.44'
     }
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        //GMS
+        classpath 'com.google.gms:google-services:4.3.14'
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.1' apply false
